...
      }
    },
    "Export" : {
      "comment" : "Title of the export step in the export flow.",
      "isCommentAutoGenerated" : true
    },
    "Export — PhotoBooks" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Export — PhotoBooks"
...
